[package]
name = "table"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datasize = { version = "0.2.13", optional = true }
serde = { version = "*", features = ["derive"], optional = true }
rkyv = { version = "*", default-features = false, optional = true }
log = "*"
